--- a/Option.ini
+++ b/Option.ini
@@ -1,3 +1,22 @@
+BOOL=BasicuseExitDlg=false
+BOOL=BasicuseLastSize=true
+BOOL=BasicisWindowOpen=true
+BOOL=BasicuseAdminPassword=false
+HIDE_STRING=Basicpassword=60392a0d922b9077
+STRING=BasicserverName=
+BOOL=BasiceditBrowse=false
+LIST=Basiclang=0
+LIST=BasicprotocolKind=0
+INT=Basicport=80
+BINDADDR=BasicbindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
+BOOL=BasicuseResolve=false
+BOOL=BasicuseDetailsLog=true
+INT=Basicmultiple=50
+INT=BasictimeOut=30
+RADIO=BasicenableAcl=0
+STRING=BasicaclName=
+STRING=BasicaclAddress=
+DAT=Basicacl=	xxx	192.168.0.1	xxx	127.0.0.1
 LIST=LognomalFileName=2
 LIST=LogsecureFileName=2
 FOLDER=LogsaveDirectory=
@@ -8,4 +27,5 @@ INT=LoglinesMax=3000
 INT=LoglinesDelete=1000
 RADIO=LogEnableLimitString=1
 STRING=LogCharacter=
+DAT=LogLimitString=	123
 BOOL=LogUseLimitString=false
