--- a/Option.ini
+++ b/Option.ini
@@ -27,5 +27,5 @@ INT=LoglinesMax=3000
 INT=LoglinesDelete=1000
 RADIO=LogEnableLimitString=1
 STRING=LogCharacter=
-DAT=LogLimitString=	123
+DAT=LogLimitString=	123	222
 BOOL=LogUseLimitString=false
