--- a/Option.ini
+++ b/Option.ini
@@ -19,13 +19,13 @@ STRING=BasicaclAddress=
 DAT=Basicacl=	xxx	192.168.0.1	xxx	127.0.0.1
 LIST=LognomalFileName=2
 LIST=LogsecureFileName=2
-FOLDER=LogsaveDirectory=
+FOLDER=LogsaveDirectory=C:\tmp2
 BOOL=LoguseLog=true
 BOOL=LoguseLogClear=false
 INT=LogsaveDays=31
 INT=LoglinesMax=3000
 INT=LoglinesDelete=1000
-RADIO=LogEnableLimitString=1
+RADIO=LogisDisplay=1
 STRING=LogCharacter=
 DAT=LogLimitString=	123	222
 BOOL=LogUseLimitString=false
