--- a/Option.ini
+++ b/Option.ini
@@ -20,7 +20,7 @@ DAT=Basicacl=	xxx	192.168.0.1	xxx	127.0.0.1
 LIST=LognomalFileName=2
 LIST=LogsecureFileName=2
 FOLDER=LogsaveDirectory=C:\tmp2
-BOOL=LoguseLog=true
+BOOL=LoguseLogFile=true
 BOOL=LoguseLogClear=false
 INT=LogsaveDays=31
 INT=LoglinesMax=3000
