--- a/Option.ini
+++ b/Option.ini
@@ -16,6 +16,7 @@ INT=BasictimeOut=30
 RADIO=BasicenableAcl=0
 STRING=BasicaclName=
 STRING=BasicaclAddress=
+DAT=Basicacl=	111	111
 LIST=LognormalFileName=2
 LIST=LogsecureFileName=2
 FOLDER=LogsaveDirectory=
@@ -26,4 +27,4 @@ INT=LoglinesMax=3000
 INT=LoglinesDelete=1000
 RADIO=LogisDisplay=1
 STRING=LogCharacter=
-BOOL=LogUseLimitString=false
+BOOL=LoguseLimitString=false
