--- a/bin/Option.ini
+++ b/bin/Option.ini
@@ -8,7 +8,7 @@ BOOL=BasiceditBrowse=false
 LIST=Basiclang=0
 LIST=BasicprotocolKind=0
 INT=Basicport=80
-BINDADDR=BasicbindAddress2=V4ONLY,INADDR_ANY,IN6ADDR_ANY_INIT
+BINDADDR=BasicbindAddress2=0
 BOOL=BasicuseResolve=false
 BOOL=BasicuseDetailsLog=true
 INT=Basicmultiple=50
