--- a/bin/Option.ini
+++ b/bin/Option.ini
@@ -16,14 +16,16 @@ INT=BasictimeOut=30
 RADIO=BasicenableAcl=0
 STRING=BasicaclName=
 STRING=BasicaclAddress=
-LIST=LognormalFileName=2
-LIST=LogsecureFileName=2
-FOLDER=LogsaveDirectory=
+LIST=LognormalLogKind=2
+LIST=LogsecureLogKind=2
+FOLDER=LogsaveDirectory=C:\tmp2
 BOOL=LoguseLogFile=true
 BOOL=LoguseLogClear=false
 INT=LogsaveDays=31
 INT=LoglinesMax=3000
 INT=LoglinesDelete=1000
+FONT=Logfont=Serif,0,12
 RADIO=LogisDisplay=1
 STRING=LogCharacter=
+DAT=LoglimitString=	123
 BOOL=LoguseLimitString=false
