--- a/bin/Option.ini
+++ b/bin/Option.ini
@@ -16,6 +16,7 @@ INT=BasictimeOut=30
 RADIO=BasicenableAcl=0
 STRING=BasicaclName=
 STRING=BasicaclAddress=
+DAT=Basicacl=	default	127.0.0.1
 LIST=LognormalLogKind=2
 LIST=LogsecureLogKind=2
 FOLDER=LogsaveDirectory=C:\tmp2
@@ -27,5 +28,5 @@ INT=LoglinesDelete=1000
 FONT=Logfont=Serif,0,12
 RADIO=LogisDisplay=1
 STRING=LogCharacter=
-DAT=LoglimitString=	123
+DAT=LoglimitString=	444	3333
 BOOL=LoguseLimitString=false
